k8s/overlays/dev/sampleAddresses.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-address-route
spec:
  hostnames:
    - streams.dev.telge.iteam.pub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-address
spec:
  template:
    spec:
      containers:
        - name: sample-address
